--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "express-mesto-gha",
   "version": "0.1.0",
+  "type": "commonjs",
   "private": true,
   "homepage": "https://n3ket.github.io/express-mesto-gha/",
   "dependencies": {
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
     "mongoose": "^6.9.0"
   },
   "scripts": {
@@ -23,7 +26,7 @@
     "nodemon": "^2.0.20"
   },
   "description": "[![Tests](../../actions/workflows/tests-13-sprint.yml/badge.svg)](../../actions/workflows/tests-13-sprint.yml) [![Tests](../../actions/workflows/tests-14-sprint.yml/badge.svg)](../../actions/workflows/tests-14-sprint.yml) # Проект Mesto фронтенд + бэкенд",
-  "main": ".eslintrc.js",
+  "main": "app.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/N3keT/express-mesto-gha.git"
