--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
-    "mongoose": "^6.9.0"
+    "mongoose": "^6.9.0",
+    "validator": "^13.9.0"
   },
   "scripts": {
     "start": "node app.js",
